--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=8080
+spring.datasource.username=emsadmin
+spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://localhost:3306/ems?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
